multiqueue: Allow growing a queue if all other queues are not linked

See https://bugzilla.gnome.org/show_bug.cgi?id=719893